faux que c propre